slurm_output/old/slurm-48419111.out
compute-a-17-86.o2.rc.hms.harvard.edu
  File "multithreading.py", line 64
    processes.append(p)
            ^
SyntaxError: invalid syntax
